# upa_atm

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3d625fe  actionsscreen.cpp  actionsscreen.h  actionsscreen.ui  bank_db_schema.drawio  config  login.cpp  login.h  login.ui  main.cpp  mainwindow.ui  navigationwindow.cpp  navigationwindow.h  navigationwindow.ui  success_screen.cpp  success_screen.h  success_screen.ui  test_result_apa_atm.xlsx  transaction_details.cpp  transaction_details.h  transaction_details.ui  transaction_screen.cpp  transaction_screen.h  transaction_screen.ui  withdrawmoney.cpp  withdrawmoney.h  withdrawmoney.ui  withdrawscreen.cpp  withdrawscreen.h  withdrawscreen.ui
backend/: bank.cpp  bank.h  bankProvider.cpp  bankProvider.h  user_card.h
backend/database/: DatabaseException.h  SqlQuery.h  db_card.cpp  db_card.h  db_category.cpp  db_category.h  db_holder.cpp  db_holder.h  db_parent_relation.cpp  db_parent_relation.h  db_transaction.cpp  db_transaction.h  db_util.cpp  db_util.h  sqltransaction.cpp  sqltransaction.h
frontend/: depositscreen.cpp  depositscreen.h  depositscreen.ui  error_message.cpp  error_message.h  parseOrError.h  phonewindow.cpp  phonewindow.h  phonewindow.ui  put_money.cpp  put_money.h  put_money.ui  transactionhistoryscreen.cpp  transactionhistoryscreen.h  transactionhistoryscreen.ui  transactionitem.cpp  transactionitem.h  transactionitem.ui  withdrawalscreen.cpp  withdrawalscreen.h  withdrawalscreen.ui
middleware/: SignedConnection.h  card_info.h  cardinfo.h  connectionDetails.h  connectionExceptions.h  converters.cpp  converters.h  credentials.cpp  credentials.h  deposit.h  exceptions.h  juniorConnection.h  signedConnection.cpp  signedConnection.h  tariff.cpp  tariff.h  top_up.h  transaction.h  transfer.cpp  transfer.h  types.h  unsignedConnection.h
tests/: basic_db_test.cpp  basic_db_test.h
